// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    £2.32
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with totals from expenses 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    £122.32
  </h1>
</div>
`;
